httpd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
  namespace: default
spec:
  selector:
    matchLabels:
      app: httpd
  replicas: 1
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd
        image: ghcr.io/sjgorey/httpd-project:latest
        ports:
          - name: web
            containerPort: 80
