httpd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd
  namespace: default
spec:
  selector:
    app: httpd
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
